--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,12 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  padding: 15px;
+  background: white;
+  line-height: 50px;
+  box-shadow: 0 0 15px;
+  width: auto;
+  border-radius: 8px;
+}
